# cwm-python

./: .gitignore  LICENSE  README.md  design-plan.md  pyproject.toml  requirements.txt  sprints.md
codewatchman/: __init__.py  codewatchman.py  config.py  console_handler.py  exceptions.py  logger.py
codewatchman/core/: __init__.py  config.py  constants.py  logger.py  manager.py  orchestrator.py
codewatchman/exceptions/: __init__.py  exceptions.py
codewatchman/formatters/: __init__.py  base.py  default.py
codewatchman/handlers/: __init__.py  base.py  console.py  console_formatter.py  websocket.py
codewatchman/queue/: __init__.py  log.py  message.py  message_queue.py  worker.py
codewatchman/utils/: __init__.py  console_formatter.py  json_encoder.py  metrics.py  serializer.py
tests/: test_config.py  test_console_handler.py  test_logger.py  test_metrics.py  test_queue.py  test_queue_failure.py  test_websocket_handler.py
