[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codewatchman"
version = "0.1.0"
description = "A logging library with cloud support and tqdm progress tracking"
authors = [
    { name="Code Watchman Team", email="support@codewatchman.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets==13.*",
    "colorama==0.4.*",
    "tqdm==4.*",
    "black==24.*",
    "mypy==1.*",
    "psutil==6.1.*",
    "nvidia-ml-py==12.560.30"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/mavenintel/cwm-python"
"Bug Reports" = "https://github.com/mavenintel/cwm-python/issues"
"Documentation" = "https://docs.codewatchman.com/"

[tool.setuptools]
packages = ["codewatchman"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
UNIT_TESTS = "true"
